fixed CSS priority issue
some CSS for vertically centering the social icons were getting messed up from priority, so changed that. I also changed the height of the body during mobile mode so it hopefully doesn't get covered by the tool bar. damn you mobile browsers

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html {
 
 @media (max-width: 430px) {
     body {
-        height: 100dvh;
+        height: 85vh;
     }
 }
 
@@ -947,9 +947,9 @@ cursor width is 1/2 border width */
 
 @media (max-width: 400px) {
 
-    #resume,
-    #reportBug,
-    #platforms {
+    #contact.portrait #resume,
+    #contact.portrait #reportBug,
+    #contact.portrait #platforms {
         height: calc(20vw - 4vh);
     }
 
